--- a/rusty-journal/Cargo.toml
+++ b/rusty-journal/Cargo.toml
@@ -10,11 +10,5 @@ serde_json = "1.0"    # Add serde_json.
 structopt = "0.3"
 home = "0.5"
 anyhow = "1.0"
-
-[dependencies.chrono]
-features = ["serde"]  # We're also going to need the serde feature for the chrono crate, so we can serialize the DateTime field.
-version = "0.4"
-
-[dependencies.serde]  # Add serde in its own section.
-features = ["derive"] # We'll need the derive feature.
-version = "1.0"
+chrono = {version = "0.4", features = ["serde"]}
+serde = {version = "1.0", features = ["derive"]}
